Added UsageCalculator and UsageCalculatorTest